--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.1.0",
     "nodemailer": "^6.9.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanielDevss/Revs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DanielDevss/Revs/issues"
+  },
+  "homepage": "https://github.com/DanielDevss/Revs#readme"
 }
